# SimpleColorKeyer

./: CMakeLists.txt  CMakeLists_LINUX.txt  CMakeLists_MAC.txt  CMakeLists_WINDOWS.txt  README.md  SimpleColorKeyer.cpp  building_step_by_step.txt
MAC/15.0v8/: SimpleColorKeyer.dylib
MAC/15.1v10/: SimpleColorKeyer.dylib
MAC/15.1v5/: SimpleColorKeyer.dylib
MAC/15.2v6/: SimpleColorKeyer.dylib
MAC/16.0v4/: SimpleColorKeyer.dylib
MAC/16.0v6/: SimpleColorKeyer.dylib
MAC/16.1v1/: SimpleColorKeyer.dylib
MAC/17.0v1/: SimpleColorKeyer.dylib
WINDOWS/: CMakeLists.txt  building_step_by_step.txt
